--- a/src/templates/_bottom.html
+++ b/src/templates/_bottom.html
@@ -1,5 +1,7 @@
 <footer class="footer">
-    <div id="map" class="footer__map"></div>
+    <div id="map" class="footer__map">
+
+    </div>
     <div class="footer__info">
         <div class="footer__left">
             <p class="footer__adderess">90802 California <br>
